test/resource/valid/compress/template.ftl
<#compress>
  1 2  3   4    5
  ${moo}
  test only

  I said, test only

</#compress>
