test/resource/invalid/escape.ftl
<#escape test as {"a": 2>${1}</#escape>
